# apps/api/src/schedule/schedule.module.ts
@@ -1,0 +1,11 @@
+import { Module } from '@nestjs/common';
+import { ScheduleController } from './schedule.controller';
+import { ScheduleService } from './schedule.service';
+import { PrismaModule } from '../common/prisma/prisma.module';
+
+@Module({
+    imports: [PrismaModule],
+    controllers: [ScheduleController],
+    providers: [ScheduleService],
+})
+export class ScheduleModule { }
